# HE_comparison_implementation

./: .gitignore  README.md
OpenFHE_Node-API/: CMakeLists.txt  greater_than.cc  greater_than_pke.cc  index.js  package.json
TFHE-rs_NAPI-RS/: package-lock.json
TFHE-rs_NAPI-RS/src/: lib.rs
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
node-api_OpenFHE/: greater_than_pke.cc  index.js  package-lock.json  package.json
tfhe-rs/: Cargo.toml  index.d.ts  index.js  package.json
tfhe-rs/src/: lib.rs
